--- a/airbnbfy/index.html
+++ b/airbnbfy/index.html
@@ -10,7 +10,13 @@
   </head>
   <body>
     <noscript></noscript>
-    <div id="root"></div>
+    <div id="root">
+      <h1>한글 난독화</h1>
+      <textarea id="before" cols="50" rows="10"></textarea>
+      <button id="convertButton">변환하기</button>
+      <h2>변환된 문장</h2>
+      <textarea id="after" cols="50" rows="10"></textarea>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
